--- a/cssAssignment/2/main/style.css
+++ b/cssAssignment/2/main/style.css
@@ -1,101 +1,164 @@
 body{
     margin: 0px;
     padding: 0px;
+   
 
 }
+
 
 .main{
     width: 100%;
-    height:100% ;
-
-
+    height: 100%;
+   
 }
-
 .head{
     width: 100%;
-    height: auto;
-    z-index: 1;
+    height: 70px;
+    background-image: linear-gradient( to bottom right, rgb(106, 106, 106), rgb(0, 0, 0));
+}
 
+
+.left{
+    width: 50%;
+    height: 100%;
+    float: left;
+    color: white;
     
-
+    
+    
 }
-
-.leftH{
+   
+.right{
+    height: 100%;
     width: 50%;
     float: left;
+    }
+
+ul{
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+
 }
-.rightH{
-    width: 50%;
+li{
+    
     float: left;
 }
+
+li a{
+    display: block;
+  color: white;
+  text-align: center;
+  padding: 25px 16px;
+  text-decoration: none;
+}
+li a:hover:not(.active){
+    background-color: darkgoldenrod;
+}
+
+
 .body{
-    position: relative;
+    width: 100%;
+    height: 100%;
+    
+}
+.body div{
+    
+    width: 100%;
+    height: 400px;
+    
     text-align: center;
-    width: 100%;
-    height: auto;
-}
-
-.body img{
-    width: 100%;
-    height:600px;
-
-
-}
-
-#one h1{
-    font-style: bold italic;
-   
-
-}
-#two h1{
-    font-weight: lighter;
-    font-size: xx-large;
-   
-}
-#three h3 {
-    font-family: Arial, Helvetica, sans-serif;
-    
-}
-
-
-#one{
-    position: absolute;
-    top: 3%;
-    left: 1%;
-
-    
-}
-#two{
-    position: absolute;
-    top: 20%;
-    left: 30%;
-
-}
-#three{
-    position: absolute;
-    top: 40%;
-    left: 10%;
-
-}
-#three div{
-    float: left;
-    width: 32%;
-}
-#four{
-    position: absolute;
-    font-size: 30px;
-    top: 50%;
-    left: 30%;
-}
-#five{width: 100%;
-    height: 600px;
     position: relative;
-    background-color: aliceblue;
-    top: 80%;
-    left: 0%;
 }
-#six{
+img{
+    width: 100%;
+    height: 400px;
+    
+
+}
+
+.body h1  {
+    color: rgb(72, 72, 72);
+    position: absolute;;
+   
+
+}
+
+.body p{
+    color: rgb(255, 255, 255);
     position: absolute;
-    top: 90%;
-    left: 30%;
+   
+}
+button{
+    position:absolute; top: 55%; left: 30%; width: 150px;height: 50px;
+    background-color:rgba(red, green, blue, alpha);
+    border-radius: 10px;
+    
+}
+
+
+button {background-image: linear-gradient(to right, #314755 0%, #26a0da  51%, #314755  100%)}
+button {
+   margin: 0px;
+   padding: 0px;
+   text-align: center;
+   text-transform: uppercase;
+   transition: 0.5s;
+   background-size: 200% auto;
+   color: white;            
+   
+   border-radius: 10px;
+   display: block;
+   border: none;
+ }
+
+ button:hover {
+   background-position: right center; /* change the direction of the change here */
+   color: #fff;
+   text-decoration: none;
+ }
+
+.content{
+    width: 100%;
+    height: 400px;
+    background-color: rgb(186, 186, 186);
+    padding-top: 40px;
+    padding-left: 40px;
+}
+
+.content div{
+    width: 30%;
+    height: 50%;
+    border: 0px;
+    
+    float: left;
+    
+}
+#icn{
+    
+    width: 30%;
+    height: 100%;
+    padding-top: 30px;
+    float: left;
+
+}
+#txt{
+    width:70%;
+    height: 100%;
+    
+    float: left;
+    
+}
+#icn img{
+    width: 80%;
+    height: 70%;
+}
+.content p{
+    padding-top: 40px;
+font-size: 13px;
+}
+
+.content h1{
+    padding-left: 80px;
+    margin: 0px;
 }
